c4prj1_deck/grade.txt
Grading at Sun Mar  7 12:40:07 UTC 2021
Compiling deck.c -> deck.o
deck.c: In function ‘add_empty_card’:
deck.c:17:8: error: incompatible types when returning type ‘card_t {aka struct card_tag}’ but ‘card_t * {aka struct card_tag *}’ was expected
 return empty;
        ^
deck.c:18:1: error: control reaches end of non-void function [-Werror=return-type]
 }       
 ^
cc1: all warnings being treated as errors
Compilation of deck.c failed

Overall Grade: F
